# lola

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  FEEDBACK.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
examples/example-skills/: README.md
examples/example-skills/.lola/: module.yml
examples/example-skills/code-review/: SKILL.md
examples/example-skills/commands/: quick-commit.md  review-pr.md
examples/example-skills/git-workflow/: SKILL.md
examples/git-module/: README.md
examples/git-module/module/: AGENTS.md
specs/002-target-uninstall/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-target-uninstall/checklists/: requirements.md
specs/002-target-uninstall/contracts/: target-interface.md
src/lola/: __main__.py  command_converters.py  config.py  converters.py  exceptions.py  frontmatter.py  install.py  layout.py  main.py  models.py  parsers.py  sources.py  targets.py  ui.py  utils.py
src/lola/cli/: __init__.py  install.py  market.py  mod.py
src/lola/core/: __init__.py  generator.py  installer.py
src/lola/market/: manager.py
src/lola/targets/: __init__.py  base.py  (+5 more)
tests/: __init__.py  conftest.py  test_agents.py  test_cli_install.py  test_cli_main.py  test_cli_market.py  test_cli_mod.py  test_config.py  test_converters.py  test_frontmatter.py  test_generator.py  test_installer.py  test_instructions.py  test_market_manager.py  test_marketplace_model.py  test_mcps.py  test_models.py  test_single_skill.py  test_skill_source_dir.py  test_sources.py  test_targets.py  test_utils.py
(+5 files in other folders)
